# DietFit

./: .gitignore  README.md  app.py  graph.py  pyproject.toml  requirements.txt  state.py  style.css
agents/: __init__.py  advisor.py  calculator.py  nutrition.py  recipe.py  vision.py
utils/: gemini.py  storage.py  usda.py
